[package]
name = "too-many-things"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "3.2.20", features = ["derive"]}
env_logger = "0.9.0"
log = "0.4.17"
rand = "0.8.5"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"

